--- a/package.json
+++ b/package.json
@@ -9,13 +9,17 @@
     "start": "next start"
   },
   "dependencies": {
+    "@types/seed-random": "^2.2.0",
     "airtable": "^0.10.1",
+    "date-fns": "^2.16.1",
     "dotenv": "^8.2.0",
     "fuse.js": "^6.4.3",
     "next": "10.0.3",
     "next-on-netlify": "^2.6.3",
     "react": "17.0.1",
     "react-dom": "17.0.1",
+    "react-masonry-css": "^1.0.14",
+    "seed-random": "^2.2.0",
     "styled-components": "^5.2.1",
     "swr": "^0.3.9"
   },
